--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ project.image=images/
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.app.jwtSecret=mySecretKey123124356ogjodngfnerwhnjgnjngrjkngrjengjnjkgaga
+spring.app.jwtExpirationMs=300000
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.ecommerce.project=DEBUG
