Implemented the Cookie based auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ project.image=images/
 
 spring.app.jwtSecret=mySecretKey123124356ogjodngfnerwhnjgnjngrjkngrjengjnjkgaga
 spring.app.jwtExpirationMs=300000
+spring.ecom.app.jwtCookieName=springBootEcom
 
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
