implemented the put and delete mapping to add and delete product from the cart

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.url=jdbc:h2:mem:test
 
 project.image=images/
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.app.jwtSecret=mySecretKey123124356ogjodngfnerwhnjgnjngrjkngrjengjnjkgaga
 spring.app.jwtExpirationMs=300000
