--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,31 @@
 spring.application.name=sb-ecom
 server.port=3000
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommerce
+#spring.datasource.username=root
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=Kshitij@098
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 project.image=images/
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.app.jwtSecret=mySecretKey123124356ogjodngfnerwhnjgnjngrjkngrjengjnjkgaga
 spring.app.jwtExpirationMs=300000
 spring.ecom.app.jwtCookieName=springBootEcom
 
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.com.ecommerce.project=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.security=DEBUG
+#logging.level.com.ecommerce.project=DEBUG
+
