Implemented the configuration to connect the backend to frontend locally

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=sb-ecom
+#Needed if used elastic beanstalk
 server.port=3000
 
 #spring.h2.console.enabled=true
@@ -7,9 +8,11 @@ server.port=3000
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommerce
 #spring.datasource.username=root
 
+#spring.datasource.url=jdbc:postgresql://ecommerce.cpwaw8uw8764.us-east-1.rds.amazonaws.com:5432/myapp
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=postgres
-spring.datasource.password=Kshitij@098
+spring.datasource.password=Kshitij098
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -29,3 +32,6 @@ spring.ecom.app.jwtCookieName=springBootEcom
 #logging.level.org.springframework.security=DEBUG
 #logging.level.com.ecommerce.project=DEBUG
 
+
+frontend.url=http://localhost:5173
+image.base.url=http://localhost:3000/images
